--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -34,11 +34,11 @@
                     <input type="email" name="email" id="email" value="" placeholder="Email address" required />
                 </div>
                 <div class="12u">
-                    <input type="radio" id="attending" name="attending" required>
+                    <input type="radio" id="attending" name="attending" value="Yes" required>
                     <label for="attending">I will be attending</label>
                 </div>
                 <div class="12u">
-                    <input type="radio" id="not-attending" name="attending">
+                    <input type="radio" id="not-attending" name="attending" value="No">
                     <label for="not-attending">I send my apologies</label>
                 </div>
             </div>
