--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -22,7 +22,7 @@
     <div class="inner">
         <header>
             <h2>RSVP</h2>
-            <p>Please let us know if you can make it by <b>{{ site.rsvp_date }}</b>.</p>
+            <p>Please let us know if you can make it!</p>
         </header>
 
         <form id="rsvp-form" method="post" action="{{ site.rsvp_post }}">
